--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,19 @@
 #container {
-	position: relative;
-	top: 30px;
-	outline:2px solid #000;
-	font-size: 0;
-	margin:auto;
-	height:480px;
-	width:480px;
-	padding: 0;
-	border: none;
-}
-
-.gridCell {
-    width: 30px;
-    height: 30px;
-    margin: 0;
-    padding: 0;
-    border: 1px solid black;
-    display: inline-block;
-    box-sizing: border-box;
-    vertical-align: top;
+    position: relative;
+    top: 30px;
+    border: 2px solid #3ea7ab;
+    width: 500px;
+    height: 500px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    margin: 0 auto;
+  }
+  
+  .gridCell {
+    border: 1px solid white;
+  }
+    
+  .gridCell:hover{
+    background-color: aqua;
 }
